# athena

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Procfile  README.md  _gitlog.tmp  _gitstatus.tmp  docker-compose.yml  projects.yaml  pyproject.toml  requirements.txt  tree.clean.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
data/: health.db-shm  health.db-wal
deploy/hetzner/: DEPLOY.md  docker-compose.prod.yml  nginx.conf  setup.sh
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secret.yaml  service.yaml
src/: config.py  main.py
src/agents/: __init__.py  backend.py  base.py  frontend.py  manager.py  tester.py
src/api/: diag_routes.py  health_routes.py  routes.py  runner_routes.py  server.py  task_routes.py
src/autonomy/: __init__.py  heartbeat.py
src/context/: __init__.py
src/health/: __init__.py  engine.py  scheduler.py
src/memory/: __init__.py  context_assembler.py  curator.py  graph_context.py  mem0_client.py
src/notifications/: __init__.py  discord.py  telegram.py
src/orchestrator/: __init__.py  execution_bridge.py  graph.py  run_state.py  state.py
src/projects/: __init__.py  registry.py
src/runner/: __init__.py  app.py  config.py  endpoints.py  main.py  safety.py
src/runner_connector/: __init__.py  client.py  models.py  (+1 more)
tests/: conftest.py  test_agents.py  test_api.py  test_health.py  test_memory.py  test_openai_backend.py  test_orchestrator.py  test_projects.py  test_runner.py  test_session_parser.py  test_tasks.py  test_token_tracker.py  test_workshop_features.py
(+19 files in other folders)
